--- a/assets/style.css
+++ b/assets/style.css
@@ -1,13 +1,21 @@
 body {
     font-family: Open Sans;
+    background-image: url("images/background.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center;  
 }
 
 h1 {
     text-align: center;
 }
-
+img{
+    max-width: 100%;
+    height: auto;
+}
 #title {
-    text-decoration: underline;
+    margin-top: 5%;
 }
 
 #quiz {
@@ -44,14 +52,13 @@ button {
 }
 
 #container {
-    width:50%;
-    margin:auto;
+    margin-top: 10%;
     padding: 0 25px 40px 10px;
     background-color: #1E90FF;
     border:4px solid #B0E0E6;
     border-radius:5px;
     color: #FFFFFF;
-    font-weight: bold;
+    font-size: 1.2em;
     box-shadow: 5px 5px 5px #888;
 }
 
